fixing Advertisement class name

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -48,7 +48,7 @@
     "                                                                                                self.neighborhood,self.prop_type,\n",
     "                                                                                                self.rooms, self.living_room, self.price))\n",
     "        \n",
-    "class Advertisment:\n",
+    "class Advertisement:\n",
     "    def __init__(self, base_info, last_edit='None', area='None', prop_floor='None', building_age='None',\n",
     "                 heating_type='None', building_floors='None', credit_availability='None', furniture_availability='None',\n",
     "                 bathrooms='None', building_type='None', building_status='None', usage_status='None', deed='None', dues='None',\n",
@@ -199,7 +199,7 @@
     "            elif(param_type=='Yakıt Tipi'):\n",
     "                fuel_type = param_value\n",
     "    \n",
-    "    return Advertisment(base_info, last_edit, area, prop_floor, building_age, heating_type,\n",
+    "    return Advertisement(base_info, last_edit, area, prop_floor, building_age, heating_type,\n",
     "                        building_floors, credit_availability, furniture_availability, bathrooms, building_type, building_status,\n",
     "                        usage_status, deed, dues, swap, student_single, facade, fuel_type)"
    ]
